# SAHM

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  json.txt  pyproject.toml  run_all.sh
assets/: .gitkeep
docs/: index.html  leaderboard.html
evaluation/: eval_mcq.py  run_eval_arabic_financial.py  run_eval_fatwa.py  run_eval_islamic_financial.py
models/: jais.py
sahm_eval/: __init__.py  aggregate.py  api_runner.py  cli.py  config.py  judge.py  loader.py  mcq.py  pipeline.py  prompts.py  rescore.py  vllm_runner.py
sahm_eval/configs/: models.yaml  tasks.yaml
src/: README.md  config.yaml  models.yaml  requirements.txt  run_all.sh
src/output/mcq/Sentiment_Analysis_MCQ_eval/: test_claude-4-sonnet_results.jsonl  test_gemini-2.5-pro_results.jsonl  test_gemma-2-9b-it_results.jsonl  test_gpt-4_results.jsonl  test_gpt-4o_results.jsonl  test_gpt5_results.jsonl  test_llama-3.1-8b_results.jsonl  test_qwen2.5-14b-instruct_results.jsonl  test_qwen2.5-7b-instruct_results.jsonl  validation_claude-4-sonnet_results.jsonl  validation_gemini-2.5-pro_results.jsonl  validation_gemma-2-9b-it_results.jsonl  validation_gpt-4_results.jsonl  validation_gpt-4o_results.jsonl  validation_gpt5_results.jsonl  validation_llama-3.1-8b_results.jsonl  validation_qwen2.5-14b-instruct_results.jsonl  validation_qwen2.5-7b-instruct_results.jsonl
src/output/mcq/arabic-accounting-mcq_eval/: test_claude-4-sonnet_results.jsonl  test_gemini-2.5-pro_results.jsonl  test_gemma-2-9b-it_results.jsonl  (+17 more)
src/scripts/: __init__.py  api_client.py  eval.py  gpt5_evaluation.py  utils.py
(+207 files in other folders)
