[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sahm-eval"
version = "0.1.0"
description = "Evaluation harness for the SAHM Arabic financial & Shari'ah-compliant reasoning benchmark"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "SAHM Benchmark Team" }]
keywords = ["nlp", "arabic", "evaluation", "benchmark", "llm", "islamic-finance"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core deps: enough to load tasks, run API models, and judge.
dependencies = [
  "pyyaml>=6.0",
  "datasets>=2.18",
  "huggingface_hub>=0.24",
  "openai>=1.40",
]

[project.optional-dependencies]
# Local open-model inference on a GPU node.
gpu = [
  "vllm>=0.6.0",
  "transformers>=4.44",
  "torch>=2.1",
]

[project.urls]
Repository = "https://github.com/mbzuai-nlp/SAHM"
Dataset = "https://huggingface.co/SahmBenchmark"
Paper = "https://arxiv.org/abs/2604.19098"

[project.scripts]
sahm-eval = "sahm_eval.cli:main"

[tool.setuptools]
packages = ["sahm_eval", "sahm_eval.configs"]

[tool.setuptools.package-data]
"sahm_eval.configs" = ["*.yaml"]
